[tool.poetry]
name = "rmcl"
version = "0.1.0"
description = "reMarkable Cloud Library"
authors = ["Robert Schroll <rschroll@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyaml = "^20.4.0"
trio = "^0.18.0"
asks = "^2.4.12"
xdg = "^5.0.1"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
jedi = "0.17.2"
bidict = "^0.21.2"
pyfuse3 = "^3.2.0"
rmrl = "^0.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
