[tool.poetry]
name = "rmcl"
version = "0.4.2"
description = "reMarkable Cloud Library"
authors = ["Robert Schroll <rschroll@gmail.com>"]
license = "MIT"
repository = "https://github.com/rschroll/rmcl"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
trio = "^0.18.0"
asks = "^2.4.12"
xdg = "^5.0.1"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
jedi = "0.17.2"
rmrl = "^0.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
